--- a/dogadjajiApp/package.json
+++ b/dogadjajiApp/package.json
@@ -12,8 +12,8 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
-        "bootstrap": "^5.1.3",
+        "axios": "^0.21.4",
+        "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -24,6 +24,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "react-bootstrap": "^2.7.2",
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.8.1"
     }
