--- a/dogadjajiApp/package.json
+++ b/dogadjajiApp/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
+        "@types/jquery": "^3.5.16",
         "axios": "^0.21.4",
         "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
@@ -24,6 +25,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "jquery": "^3.6.3",
         "react-bootstrap": "^2.7.2",
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.8.1"
