--- a/dogadjajiApp/package.json
+++ b/dogadjajiApp/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.3",
+        "mdbreact": "^5.2.0",
         "react-bootstrap": "^2.7.2",
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.8.1",
